<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="weatherDaily" type="com.example.weatheapp.model.dailyforecast.WeatherRespon"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
    android:background="@drawable/weather1">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_app"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:id="@+id/textView2" android:textStyle="bold" android:textColor="#fff"/>
        <TextView
                android:text="@string/kordinat_lokasi_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="52dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_daerah_name" android:textStyle="bold"
                android:textColor="#fff"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_latitude"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                android:layout_marginEnd="8dp"
                android:text="@{String.valueOf(weatherDaily.coord.lon) + ` Longitude`}"/>
        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50121653"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_longitude"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:text="@{String.valueOf(weatherDaily.coord.lat) + ` Latitude`}"/>
        <TextView
                android:text="@{weatherDaily.name}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_daerah_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        <TextView
                android:text="@string/weather_title"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:id="@+id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textStyle="bold" android:layout_marginTop="72dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" android:textColor="#fff"/>
        <TextView
                android:text="@string/wind_speed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8" android:textStyle="bold" android:textColor="#fff"/>
        <TextView
                android:text="@string/temperatur_title"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:id="@+id/textView10"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                android:layout_marginTop="16dp" android:textStyle="bold" android:textColor="#fff"/>
        <TextView
                android:text="@{String.valueOf(weatherDaily.wind.speed) + `km/h`}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_wind_speed"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"/>
        <TextView
                android:text="@{String.valueOf(weatherDaily.main.temp) + ` C`}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_temperatur"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="@+id/tv_wind_speed"
                app:layout_constraintStart_toStartOf="@+id/tv_wind_speed"/>
        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/jakarta"
                android:id="@+id/imageView"
                android:contentDescription="@string/null_value"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="28dp" app:layout_constraintTop_toTopOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginStart="62dp"/>
        <TextView
                android:text="@string/current_weather_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_weather_main" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_temperatur"
                android:layout_marginTop="16dp" android:textStyle="bold" android:textColor="#fff"/>
        <TextView
                android:text="@{weatherDaily.weather.get(0).main}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_weather_content"
                app:layout_constraintEnd_toEndOf="@+id/tv_temperatur"
                app:layout_constraintStart_toStartOf="@+id/tv_temperatur"
                app:layout_constraintBottom_toBottomOf="@+id/tv_weather_main"
                app:layout_constraintTop_toTopOf="@+id/tv_weather_main"/>
        <TextView
                android:text="@{weatherDaily.weather.get(0).description}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_weather_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_weather_content"
                android:layout_marginTop="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_fivedays_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:scrollbars="horizontal"
                android:fadeScrollbars="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" android:layout_marginTop="8dp"/>
        <TextView
                android:text="@string/forecast_for_5_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/tv_weather_description" android:layout_marginTop="52dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textStyle="bold"
                android:textColor="#fff"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>